[gd_scene load_steps=3 format=3 uid="uid://bymtxt3cfec20"]

[ext_resource type="Script" path="res://addons/LLOneBotAPI/autoload/OneBot.gd" id="1_r6hr6"]
[ext_resource type="PackedScene" uid="uid://copumgjsrngxq" path="res://addons/LLOneBotAPI/ws/one_ws.tscn" id="2_si4yc"]

[node name="OneBot" type="Node"]
script = ExtResource("1_r6hr6")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="OneWs" parent="." instance=ExtResource("2_si4yc")]

[connection signal="closed" from="OneWs" to="." method="_on_one_ws_closed"]
[connection signal="connected" from="OneWs" to="." method="_on_one_ws_connected"]
[connection signal="message_get" from="OneWs" to="." method="_on_one_ws_message_get"]
